--- a/Sayan/Text Formatting HTML 181023.html
+++ b/Sayan/Text Formatting HTML 181023.html
@@ -1,1 +1,32 @@
-h
+<head>
+    <title>
+        Text Formatting
+    </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+<!--this is a font that i borrowed from google--> 
+<!--It's free, use it-->
+<style>
+        body{
+            background-color: antiquewhite;
+        }
+        .a
+        {
+            font-size: xx-large;
+            font-family: 'Courier New', Courier, monospace;
+        }
+        .f{
+            font-family: "Press Start 2P";
+        }
+    </style>
+</head>
+<body>
+    This is a simple HTML <br>
+    <B>Bold</B><u>Underline</u><i>Italics</i><del>Del</del>   <em>Empahsized Text</em><br>
+    <strong>Important Text</strong><br>
+    SO<sub>2</sub>  Exponents:    4<sup>3</sup><br>
+    Now to make a particular paragraph using some font:
+    <p class="a">xx-large;font-family: 'Courier New', Courier, monospace;</p>
+    <p class="f">Press start 2p</p>
+</body>
